--- a/reack-app/package.json
+++ b/reack-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https//:infraestructura-it.github.io/counter-app",
+  "homepage": "https://infraestructura-it.github.io/counter-app",
   "name": "reack-app",
   "version": "0.1.0",
   "private": true,
